# astra-infer

./: .copier-answers.yml  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-nightly.yml  asv-pr.yml  build-documentation.yml  publish-benchmarks-pr.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 1b0ce206-virtualenv-py3.12-Cython-build-packaging.json  1da7a057-virtualenv-py3.12-Cython-build-packaging.json  1ea0188b-virtualenv-py3.12-Cython-build-packaging.json  2865bf61-virtualenv-py3.12-Cython-build-packaging.json  32f9f181-virtualenv-py3.12-Cython-build-packaging.json  35ca60e4-virtualenv-py3.12-Cython-build-packaging.json  6caced30-virtualenv-py3.12-Cython-build-packaging.json  97e1c8b2-virtualenv-py3.12-Cython-build-packaging.json  992f2e5c-virtualenv-py3.12-Cython-build-packaging.json  fee74556-virtualenv-py3.12-Cython-build-packaging.json
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  requirements.txt
graphs/summary/: benchmarks.PreprocessingBenchmarks.time_apply_strategy_beginning.json  benchmarks.PreprocessingBenchmarks.time_argsort.json  benchmarks.PreprocessingBenchmarks.time_first_window.json  benchmarks.PreprocessingBenchmarks.time_normalize_mag.json  benchmarks.PreprocessingBenchmarks.time_preprocess_lc.json
src/astra_infer/: __init__.py  infer.py
tests/astra_infer/: conftest.py  test_infer.py  test_packaging.py
tests/astra_infer/test_data/: test_model.onnx
